--- a/MyRealmDemo/MyRealmDemo.csproj
+++ b/MyRealmDemo/MyRealmDemo.csproj
@@ -124,6 +124,16 @@
       <SubType>Designer</SubType>
     </Resource>
   </ItemGroup>
+  <ItemGroup>
+		<Content Include="..\packages\Realm.3.3.0\runtimes\win81-x86\native\realm-wrappers.dll">
+			<Link>lib\win32\x86\realm-wrappers.dll</Link>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="..\packages\Realm.3.3.0\runtimes\win81-x64\native\realm-wrappers.dll">
+			<Link>lib\win32\x64\realm-wrappers.dll</Link>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
